add table on map graph and add filter Functionality

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -133,3 +133,9 @@
         transform: translateX(10px);
     }
 }
+// .materialui-daterange-picker-MuiGrid-root-35 {
+//     display: none !important;
+// }
+.datepicker12 > div > div > div:last-child {
+    display: none;
+}
